--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
     "babel-loader": "^8.1.0",
-    "babel-preset-env": "^1.7.0",
     "webpack": "^4.42.1",
     "webpack-bundle-tracker": "^0.4.3",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
-  }
+  },
+  "dependencies": {}
 }
